--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start":  "vue-cli-service serve",
+    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/cli-service": "~4.5.0",
     "@azure/core-http": "^2.0.0",
     "@azure/msal-browser": "^2.15.0",
+    "@vue/cli-service": "~4.5.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "tiny-emitter": "^2.1.0",
     "vee-validate": "^3.4.10",
     "vue": "^2.6.11",
+    "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-msal": "^3.2.0",
     "vue-router": "^3.5.2",
-    "vuetify": "^2.4.0",
-    "vuex": "^3.6.2",
-    "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vuetify": "^2.4.0",
+    "vuetify-loader": "^1.7.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
